# loculus

./: .codespellrc  .gitattributes  .gitignore  .gitmodules  .justfile  .pre-commit-config.yaml  .yamlfmt.yaml  404.html  AGENTS.md  CLAUDE.md  CLI_Status_Release_Commands_Plan.md  CNAME  CONTRIBUTING.md  PERFORMANCE_ANALYSIS.md  POC_PLAN.md  RAWREADS_TODO.md  README.md  README2.md  ReviewPage_Backend_API_Research.md  WEBSITE_BUGS_AUDIT.md  build-local-images.sh  check_preview.sh  custom_values.yaml  database-view-optimization-test-coverage-analysis.md  deploy.py  docker-compose-silo-preprocessing.yml  docker-compose.yml  draft-news-post-march-2026.mdx  generate_local_test_config.sh  get_admin_token.sh  get_testuser_token.sh  index.html  metadata.md  package-lock.json  preview_config_experiment.sh  repro.py  repro_curl.py  reproduce_fetch_v6.py  reproduce_fetch_v9.py  ruff.toml  (+9 more)
cli/: CLI_DYNAMIC_CONFIG_PLAN.md  CLI_METADATA_FILTERING_PLAN.md  DEV_DOCS.md  LOCULUS_CLI_PLAN.md  README.md  pyproject.toml
cli/src/loculus_cli/: __init__.py  __main__.py  cli.py  config.py  instance_info.py  local_dev.py  types.py
cli/tests/: test_backend.py
ena-submission/: .gitignore  .mambarc  AGENTS.md  Dockerfile  ENA_submission.md  FAQ.md  README.md  Snakefile  cchf_ena_submission_list.json  cchf_with_ena_fields_ena_submission_list.json  environment.yml  pyproject.toml
ena-submission/config/: config.yaml  defaults.yaml  ena-submission-config.yaml
ena-submission/curation/curations/: README.md  curation.json  send_curations_to_ena.sh
ena-submission/example_embl/: 0Q673009.1.tsv  OQ673009.1.fasta  OQ673009.1.txt
ena-submission/flyway/: Dockerfile
ena-submission/flyway/conf/: flyway.conf
ena-submission/flyway/sql/: V1.1__add_center_name.sql  V1.2__alter_project_table_id.sql  V1.3__add_annotations.sql  V1.3__add_first_visible.sql  V1.3__project_id_foreign_key.sql  V1.3__update_submission_status.sql  V1.4__project_id_foreign_key.sql  V1.5__add_first_visible.sql  V1.6__remove_transient_statuses.sql  V1.7__add_raw_reads_table.sql  V1__Initial_Schema.sql
ena-submission/mock-ena/: .dockerignore  Dockerfile  __init__.py  requirements.txt  server.py  start.sh
ena-submission/mock-ena-server/: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
ena-submission/mock-ena-server/tests/: __init__.py  test_integration.py
ena-submission/mock-ena/certs/: .gitignore  generate-certs.sh
ena-submission/profiles/default/: config.yaml
ena-submission/resources/: submission.xml
ena-submission/results/: LOC_000266C-loculus.embl  LOC_000266C_L-ena.embl  LOC_000266C_M-ena.embl  LOC_000266C_S-ena.embl  LOC_000M0C1-ena.embl  LOC_000M0C1-loculus.embl  LOC_000M10Q-loculus.embl  config.yaml
ena-submission/scripts/: call_loculus.py  compare_embl.bash  create_assembly.py  create_bioprojects.py  create_project.py  create_project_xml.py  create_sample.py  deposition_dry_run.py  ena_submission_helper.py  ena_types.py  get_ena_submission_list.py  notifications.py  project_xml.py  setup-mock-ena.sh  submission_db.py  submission_db_helper.py  test_api.py  test_ena_submission.py  test_ena_submission_integration.py  test_get_ena_submission_list.py  test_timestamp_collision_fix.py  trigger_submission_to_ena.py  upload_external_metadata_to_loculus.py
ena-submission/src/ena_deposition/: __init__.py  __main__.py  api.py  call_loculus.py  check_external_visibility.py  config.py  create_assembly.py  create_project.py  create_raw_reads.py  create_sample.py  db_helper.py  db_tables.py  ena_submission_helper.py  ena_types.py  json_utils.py  loculus_models.py  notifications.py  submission_db_helper.py  trigger_submission_to_ena.py  upload_external_metadata_to_loculus.py
ena-submission/test/: approved_ena_submission_list_test.json  conftest.py  ena_submission_list.json  external_metadata_test.ndjson  get-released-data.ndjson  test_config.yaml  test_ena_submission.py  test_ena_submission_integration.py  test_flatfile_with_apostrophe.embl  test_get_ena_submission_list.py  test_project_response.xml  test_revision_submission_request.xml  test_sample_request.xml  test_sample_request_gisaid.xml  text_project_request.xml
ena-submission/test-input/: project.yaml
ena-submission/test/data/: approved_ena_submission_list_test.json  get-released-data.ndjson  get_ena_analysis_process_response.json  test_sample_response.xml
kubernetes/silo-import/: Dockerfile  README.md  pyproject.toml
kubernetes/silo-import/tests/: helpers.py  test_config.py  test_instruct_silo.py  test_integration.py  test_runner.py  test_sentinels.py
loculus-silo/: .mypy.ini  Dockerfile  README.md  pyproject.toml
loculus-silo/src/silo_import/: __init__.py  __main__.py  config.py  constants.py  decompressor.py  download_manager.py  errors.py  instruct_silo.py  lineage.py  overview.py  paths.py  runner.py  (+1 more)
loculus-silo/tests/: helpers.py  test_config.py  test_download_manager.py  test_instruct_silo.py  test_integration.py  test_lineage.py  test_overview.py  test_runner.py
preprocessing/nextclade/: .dockerignore  .gitignore  .justfile  .mambarc  .mypy.ini  Dockerfile  README.md  config.yaml  data.json  dev_dependencies.txt  environment.yml  main.py  mock-sequences.json  mock-server.py  mock-unaligned.txt  pyproject.toml  ruff.toml
processing/nextclade/: .gitignore  .mypy.ini  Dockerfile  README.md  pyproject.toml  ruff.toml
sequlus/: .gitignore  Cargo.toml  Dockerfile
sequlus/src/: config.rs  duckdb_query.rs  lineage.rs  loader.rs  main.rs  mutations.rs  pg_query.rs  query.rs  response.rs  server.rs  store.rs  types.rs
silo-import/: Dockerfile  README.md  fix-acero-library-name.patch  pyproject.toml
silo-import/tests/: helpers.py  test_config.py  test_decompressor.py  test_instruct_silo.py  test_integration.py  test_runner.py
submission/: .gitignore  environment.yaml  pyproject.toml  ruff.toml  tasks.md
submission/tests/: test_ena_submission.py
taxonomy/ncbi_tax_download/: README.md  environment.yaml  pyproject.toml
taxonomy/taxonomy_service/: Dockerfile  README.md  environment.yaml  ncbi_taxonomy_digest.sha256  pyproject.toml
(+11417 files in other folders)
