# Basic package config to make it installable
[project]
name = "ena_deposition"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
ena_deposition = "ena_deposition.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ena_deposition"]