# Basic package config to make it installable
[project]
name = "ena_deposition"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
ena_deposition = "ena_deposition.__main__:run"

[project.optional-dependencies]
test = [
    "types-pytz",
    "types-xmltodict",
    "types-requests",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ena_deposition"]

[tool.pytest.ini_options]
# Live logging - show INFO+ during execution
log_cli = true
log_cli_level = "INFO"  # Show INFO logs during execution
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)d)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# File logging - captures everything for detailed analysis
log_file = "tests.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)d)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

addopts = [
    "-v",
    "--tb=short",  # Keep traceback short to avoid variable dumps
    "--strict-markers",
    "--strict-config",
    # Remove --showlocals to avoid the massive variable output
]
testpaths = ["scripts"]
