[project]
name = "silo-import"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "zstandard>=0.25.0,<0.26",
    "requests>=2.34.2,<3.0",
    "orjsonl>=1.0.0,<2.0",
    "duckdb>=1.4.0,<2.0",
    "pyyaml>=6.0.2,<7.0",
]

[project.scripts]
silo-import = "silo_import.__main__:main"

[project.optional-dependencies]
test = ["pytest", "mypy",
    "ruff==0.15.17",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silo_import"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
