# Basic package config to make it installable
[project]
name = "loculus_submission"
version = "0.1.0"
requires-python = ">=3.12"

# [project.scripts]
# prepro = "loculus_preprocessing.__main__:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/submission"]
