[project]
name = "silo-import"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "zstandard>=0.22,<0.23",
    "requests>=2.31,<3.0",
]

[project.scripts]
silo-import = "silo_import.main:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silo_import"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
