[tool.ruff]
line-length = 100

[tool.ruff.lint]
# ignore-init-module-imports = true
select = ["E", "F", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loculus_preprocessing"]

# Basic package config to make it installable
[project]
name = "loculus_preprocessing"
version = "0.1.0"

[project.scripts]
prepro = "loculus_preprocessing.__main__:cli_entry"
