# Basic package config to make it installable
[project]
name = "loculus_ncbi_tax_download"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
taxonomy-download = "ncbi_tax_download.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ncbi_tax_download"]

[project.optional-dependencies]
test = [
    "pytest",
]
